[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Small_UI.tres" type="DynamicFont" id=2]
[ext_resource path="res://Medium_UI.tres" type="DynamicFont" id=3]
[ext_resource path="res://Negotiation.gd" type="Script" id=4]
[ext_resource path="res://Art/UI/Mercenary.PNG" type="Texture" id=5]
[ext_resource path="res://Art/UI/Porvari.PNG" type="Texture" id=6]
[ext_resource path="res://Art/UI/Kapteeni.PNG" type="Texture" id=7]
[ext_resource path="res://Art/UI/Pelaaja.PNG" type="Texture" id=8]

[sub_resource type="Theme" id=1]

[node name="Negotiation" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 47.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
porvari = ExtResource( 6 )
palkkasoturi = ExtResource( 5 )
kapteeni = ExtResource( 7 )

[node name="PlayerOffer" type="Panel" parent="."]
margin_right = 1016.0
margin_bottom = 272.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerOffer"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPortrait" type="TextureRect" parent="PlayerOffer/HBoxContainer"]
margin_right = 204.0
margin_bottom = 217.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
stretch_mode = 4

[node name="Budget" type="VBoxContainer" parent="PlayerOffer/HBoxContainer"]
margin_left = 208.0
margin_right = 412.0
margin_bottom = 217.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerOffer/HBoxContainer/Budget"]
margin_right = 204.0
margin_bottom = 106.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "I need this much:"
align = 1
valign = 2
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerOffer/HBoxContainer/Budget"]
margin_left = 55.0
margin_top = 110.0
margin_right = 149.0
margin_bottom = 217.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="BudgetAmount" type="SpinBox" parent="PlayerOffer/HBoxContainer/Budget/HBoxContainer"]
margin_right = 74.0
margin_bottom = 107.0
size_flags_horizontal = 14
size_flags_vertical = 3
min_value = 1.0
max_value = 99.0
value = 1.0
align = 1
suffix = "00"

[node name="Label" type="Label" parent="PlayerOffer/HBoxContainer/Budget/HBoxContainer"]
margin_left = 78.0
margin_right = 94.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 1
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "â‚¬"
align = 1
valign = 1

[node name="Share" type="VBoxContainer" parent="PlayerOffer/HBoxContainer"]
margin_left = 416.0
margin_right = 620.0
margin_bottom = 217.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comment" type="Label" parent="PlayerOffer/HBoxContainer/Share"]
margin_right = 204.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "I'll give you this % of the loot:"
valign = 2
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerOffer/HBoxContainer/Share"]
margin_top = 61.0
margin_right = 204.0
margin_bottom = 217.0
size_flags_vertical = 3

[node name="SpinBox" type="HSlider" parent="PlayerOffer/HBoxContainer/Share/HBoxContainer"]
margin_right = 157.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
value = 42.0
rounded = true

[node name="Percent" type="Label" parent="PlayerOffer/HBoxContainer/Share/HBoxContainer"]
margin_left = 161.0
margin_top = 63.0
margin_right = 188.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "25"

[node name="Label2" type="Label" parent="PlayerOffer/HBoxContainer/Share/HBoxContainer"]
margin_left = 192.0
margin_top = 71.0
margin_right = 204.0
margin_bottom = 85.0
text = "%"

[node name="OfferButton" type="Button" parent="PlayerOffer/HBoxContainer"]
margin_left = 624.0
margin_right = 761.0
margin_bottom = 217.0
size_flags_horizontal = 0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "Make offer"

[node name="Offeree" type="Panel" parent="."]
margin_top = 276.0
margin_right = 1016.0
margin_bottom = 549.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Offeree"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="Offeree/HBoxContainer"]
margin_right = 356.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "So, which ship are you boarding exactly?"
align = 1
valign = 1
autowrap = true

[node name="Portrait" type="VBoxContainer" parent="Offeree/HBoxContainer"]
margin_left = 360.0
margin_right = 717.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 5
alignment = 1

[node name="InvestorPortrait" type="TextureRect" parent="Offeree/HBoxContainer/Portrait"]
margin_top = 74.0
margin_right = 357.0
margin_bottom = 138.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
stretch_mode = 4
flip_h = true

[node name="Patience" type="HBoxContainer" parent="Offeree/HBoxContainer/Portrait"]
margin_top = 142.0
margin_right = 357.0
margin_bottom = 171.0

[node name="Label" type="Label" parent="Offeree/HBoxContainer/Portrait/Patience"]
margin_right = 106.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Patience:"

[node name="PatienceBar" type="ProgressBar" parent="Offeree/HBoxContainer/Portrait/Patience"]
margin_left = 110.0
margin_right = 357.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 4.0
step = 1.0
percent_visible = false

[node name="Buttons" type="VBoxContainer" parent="Offeree/HBoxContainer"]
margin_left = 721.0
margin_right = 812.0
margin_bottom = 245.0

[node name="Accept" type="Button" parent="Offeree/HBoxContainer/Buttons"]
margin_right = 91.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Accept"

[node name="Leave" type="Button" parent="Offeree/HBoxContainer/Buttons"]
visible = false
margin_top = 210.0
margin_right = 91.0
margin_bottom = 245.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Back"

[connection signal="value_changed" from="PlayerOffer/HBoxContainer/Budget/HBoxContainer/BudgetAmount" to="." method="_on_BudgetAmount_value_changed"]
[connection signal="value_changed" from="PlayerOffer/HBoxContainer/Share/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="PlayerOffer/HBoxContainer/OfferButton" to="." method="_on_OfferButton_pressed"]
[connection signal="pressed" from="Offeree/HBoxContainer/Buttons/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="Offeree/HBoxContainer/Buttons/Leave" to="." method="_on_Leave_pressed"]
